Enable tempest playbook
download.cirros-cloud.net is back to normal and cirros images can
be downloaded.

Change-Id: I9d33663599c55949dbf922e33bf45554317a0fd8
Signed-off-by: Fatih Degirmenci <fatih.degirmenci@ericsson.com>

--- a/xci/file/setup-openstack.yml
+++ b/xci/file/setup-openstack.yml
@@ -22,3 +22,4 @@
 - include: os-horizon-install.yml
 - include: os-swift-install.yml
 - include: os-ironic-install.yml
+- include: os-tempest-install.yml
