--- a/xci/Vagrantfile
+++ b/xci/Vagrantfile
@@ -43,6 +43,7 @@ Vagrant.configure(2) do |config|
           export VM_DISK=${VM_DISK:-40}
           export VM_MEMORY_SIZE=${VM_MEMORY_SIZE:-2048}
           export VM_DOMAIN_TYPE=qemu
+          export PATH=$PATH:$HOME/.local/bin
           [[ ! -e ${HOME}/.ssh/id_rsa ]] && ssh-keygen -q -P '' -f ${HOME}/.ssh/id_rsa
           ./xci-deploy.sh
       SHELL
@@ -76,6 +77,7 @@ Vagrant.configure(2) do |config|
           export VM_DISK=${VM_DISK:-40}
           export VM_MEMORY_SIZE=${VM_MEMORY_SIZE:-2048}
           export VM_DOMAIN_TYPE=qemu
+          export PATH=$PATH:$HOME/.local/bin
           [[ ! -e ${HOME}/.ssh/id_rsa ]] && ssh-keygen -q -P '' -f ${HOME}/.ssh/id_rsa
           ./xci-deploy.sh
       SHELL
@@ -107,6 +109,7 @@ Vagrant.configure(2) do |config|
         export VM_DISK=${VM_DISK:-40}
         export VM_MEMORY_SIZE=${VM_MEMORY_SIZE:-2048}
         export VM_DOMAIN_TYPE=qemu
+        export PATH=$PATH:$HOME/.local/bin
         [[ ! -e ${HOME}/.ssh/id_rsa ]] && ssh-keygen -q -P '' -f ${HOME}/.ssh/id_rsa
         ./xci-deploy.sh
       SHELL
@@ -132,6 +135,7 @@ Vagrant.configure(2) do |config|
         export VM_DISK=${VM_DISK:-40}
         export VM_MEMORY_SIZE=${VM_MEMORY_SIZE:-2048}
         export VM_DOMAIN_TYPE=qemu
+        export PATH=$PATH:$HOME/.local/bin
         [[ ! -e ${HOME}/.ssh/id_rsa ]] && ssh-keygen -q -P '' -f ${HOME}/.ssh/id_rsa
         ./xci-deploy.sh
       SHELL
