--- a/xci/var/Suse.yml
+++ b/xci/var/Suse.yml
@@ -7,5 +7,6 @@
 # which accompanies this distribution, and is available at
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
-# this is placeholder and left blank intentionally to complete later on
+# this is the interface the VM nodes are connected to libvirt network "default"
+interface: "eth0"
 python_crypto_package_name: python-pycrypto
