xci: configure-nfs: Add SUSE support
Add ability to restart the NFS server on SUSE hosts.

Change-Id: Id5f0edb399151c62302b2e36bb9451ed35501d3f
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/roles/configure-nfs/tasks/main.yml
+++ b/xci/playbooks/roles/configure-nfs/tasks/main.yml
@@ -43,7 +43,7 @@
   with_items:
     - "/images         *(rw,sync,no_subtree_check,no_root_squash)"
     - "/volumes        *(rw,sync,no_subtree_check,no_root_squash)"
-- name: restart ubuntu xenial NFS service
+- name: restart NFS service
   service:
     name: "{{ nfs_server_service }}"
     state: restarted
