xci: configure-nfs: Install the NFS server package
We need to explicitly install the nfs server package instead of bundling
it to the dib image since not every node needs it.

Change-Id: I73f59f4ed582359df80ea08712b433537c087aea
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/roles/configure-nfs/tasks/main.yml
+++ b/xci/playbooks/roles/configure-nfs/tasks/main.yml
@@ -43,6 +43,12 @@
   with_items:
     - "/images         *(rw,sync,no_subtree_check,no_root_squash)"
     - "/volumes        *(rw,sync,no_subtree_check,no_root_squash)"
+
+- name: Install the NFS server package
+  package:
+    name: "{{ nfs_server_package }}"
+    state: latest
+
 - name: restart NFS service
   service:
     name: "{{ nfs_server_service }}"
