--- a/xci/playbooks/roles/synchronize-time/tasks/main.yml
+++ b/xci/playbooks/roles/synchronize-time/tasks/main.yml
@@ -7,16 +7,17 @@
 # which accompanies this distribution, and is available at
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
-# TODO: this role needs to be adjusted for different distros
-- block:
-    - name: restart chrony
-      service:
-        name: chrony
-        state: restarted
-    - name: synchronize time
-      shell: "chronyc -a 'burst 4/4' && chronyc -a makestep"
-      register: chrony_got_time
-      until: chrony_got_time.rc == 0
-      retries: 5
-      delay: 5
-  when: ansible_distribution_release == "xenial"
+- name: install chrony
+  package:
+    name: "chrony"
+    state: latest
+- name: restart chrony
+  service:
+    name: chrony
+    state: restarted
+- name: synchronize time
+  shell: "chronyc -a 'burst 4/4' && chronyc -a makestep"
+  register: chrony_got_time
+  until: chrony_got_time.rc == 0
+  retries: 5
+  delay: 5
