xci: synchronize-time: Install the chrony package and drop Xenial reference
The roles should pull all the packages they need so we need to install
the 'chrony' package everywhere and also drop the Xenial reference since
there is nothing Ubuntu specific here.

Change-Id: I51fb24573c0e884f8a96868e304b23140cc23b41
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/roles/synchronize-time/tasks/main.yml
+++ b/xci/playbooks/roles/synchronize-time/tasks/main.yml
@@ -7,12 +7,13 @@
 # which accompanies this distribution, and is available at
 # http://www.apache.org/licenses/LICENSE-2.0
 ##############################################################################
-# TODO: this role needs to be adjusted for different distros
-- block:
-    - name: restart chrony
-      service:
-        name: chrony
-        state: restarted
-    - name: synchronize time
-      shell: "chronyc -a 'burst 4/4' && chronyc -a makestep"
-  when: ansible_distribution_release == "xenial"
+- name: install chrony
+  package:
+    name: "chrony"
+    state: latest
+- name: restart chrony
+  service:
+    name: chrony
+    state: restarted
+- name: synchronize time
+  shell: "chronyc -a 'burst 4/4' && chronyc -a makestep"
