--- a/xci/playbooks/provision-vm-nodes.yml
+++ b/xci/playbooks/provision-vm-nodes.yml
@@ -10,21 +10,37 @@
 - hosts: localhost
   connection: local
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
-  roles:
-    # using these roles here ensures that we can reuse this playbook in different context
-    - role: remove-folders
-    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
-    - { role: clone-repository, project: "opnfv/bifrost", repo: "{{ OPENSTACK_BIFROST_GIT_URL }}", dest: "{{ OPENSTACK_BIFROST_PATH }}", version: "{{ OPENSTACK_BIFROST_VERSION }}" }
+  tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
+    - include_role:
+        name: remove-folders
+    - include_role:
+        name: clone-repository
+      vars:
+        - project: "opnfv/releng-xci"
+        - repo: "{{ OPNFV_RELENG_GIT_URL }}"
+        - dest: "{{ OPNFV_RELENG_PATH }}"
+        - version: "{{ OPNFV_RELENG_VERSION }}"
+    - include_role:
+        name: clone-repository
+      vars:
+        - project: "opnfv/bifrost"
+        - repo: "{{ OPENSTACK_BIFROST_GIT_URL }}"
+        - dest: "{{ OPENSTACK_BIFROST_PATH }}"
+        - version: "{{ OPENSTACK_BIFROST_VERSION }}"
 
 - hosts: localhost
   connection: local
   gather_facts: false
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
     - name: Synchronize local development bifrost repository to XCI paths
       # command module is much faster than the copy module
       synchronize:
@@ -54,11 +70,11 @@
 
 - hosts: localhost
   connection: local
-  gather_facts: false
   vars_files:
     - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+
     - name: combine opnfv/releng-xci and openstack/bifrost scripts/playbooks
       copy:
         src: "{{ OPNFV_RELENG_PATH }}/bifrost/"
@@ -68,9 +84,11 @@
   connection: local
   become: yes
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
     - name: destroy VM nodes created by previous deployment
       command: "/bin/bash ./scripts/destroy-env.sh"
       args:
@@ -79,9 +97,11 @@
 - hosts: localhost
   connection: local
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/opnfv.yml
   tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
     - name: create and provision VM nodes for the flavor {{ XCI_FLAVOR }}
       command: "/bin/bash ./scripts/bifrost-provision.sh"
       args:
