xci: playbooks: Add task for loading distribution variables
vars_files doesn't support loading files with variables in their names.
As such we add a new task to include these files and also use
'include_roles' to we can execute the roles right after that task. This
fixes warnings like this:

Info: Starting provisining VM nodes using openstack/bifrost
-------------------------------------------------------------------------
No config file found; using defaults
skipping vars_file '../var/{{ ansible_os_family }}.yml' due to an undefined variable
skipping vars_file '../var/{{ ansible_os_family }}.yml' due to an undefined variable
skipping vars_file '../var/{{ ansible_os_family }}.yml' due to an undefined variable
skipping vars_file '../var/{{ ansible_os_family }}.yml' due to an undefined variable
skipping vars_file '../var/{{ ansible_os_family }}.yml' due to an undefined variable
skipping vars_file '../var/{{ ansible_os_family }}.yml' due to an undefined variable

Change-Id: I0a49e2ed8d811bb40a99612462752f8691133e0f
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/configure-targethosts.yml
+++ b/xci/playbooks/configure-targethosts.yml
@@ -10,22 +10,28 @@
 - hosts: controller
   remote_user: root
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/flavor-vars.yml
-  roles:
-    - role: configure-network
-    # we need to force sync time with ntp or the nodes will be out of sync timewise
-    - role: synchronize-time
+  tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
+    - include_role:
+        name: configure-network
+    - include_role:
+        name: synchronize-time
 
 - hosts: compute
   remote_user: root
   vars_files:
-    - ../var/{{ ansible_os_family }}.yml
     - ../var/flavor-vars.yml
-  roles:
-    - role: configure-network
-    # we need to force sync time with ntp or the nodes will be out of sync timewise
-    - role: synchronize-time
+  tasks:
+    - name: Load distribution variables
+      include_vars:
+        file: ../var/{{ ansible_os_family }}.yml
+    - include_role:
+        name: configure-network
+    - include_role:
+        name: synchronize-time
 
 - hosts: compute00
   remote_user: root
