synchronize-time: Retry if chrony failed due to NTP issues
chrony randomly fails with the following issue

TASK [synchronize-time : synchronize time]
*************************************
fatal: [controller00]: FAILED! => {"changed": true, "cmd": "chronyc -a 'burst 4/4' && chronyc -a makestep", "delta": "0:00:00.004991", "end":
"2017-09-14 19:30:37.561972", "failed": true, "rc": 1, "start": "2017-09-14 19:30:37.556981", "stderr": "", "stdout": "200 OK\n503 No
such source", "stdout_lines": ["200 OK", "503 No such source"],"warnings": []}

As such, lets retry a few more times before giving up.

Change-Id: I20767bb3031061c03c9ba8dbc65859c7312bfac9
Signed-off-by: Markos Chandras <mchandras@suse.de>

--- a/xci/playbooks/roles/synchronize-time/tasks/main.yml
+++ b/xci/playbooks/roles/synchronize-time/tasks/main.yml
@@ -15,4 +15,8 @@
         state: restarted
     - name: synchronize time
       shell: "chronyc -a 'burst 4/4' && chronyc -a makestep"
+      register: chrony_got_time
+      until: chrony_got_time.rc == 0
+      retries: 5
+      delay: 5
   when: ansible_distribution_release == "xenial"
