Fix using a local copy of bifrost and openstack-ansible without recloning
The XCi playbooks have an option to use pre-loaded bifrost and
openstack-ansible repositories: by default, XCI deletes and re-clones
those repositories. If the the variables OPENSTACK_BIFROST_DEV_PATH and
OPENSTACK_OSA_DEV_PATH are defined, this is not supposed to happen. This
patch fixes the behavior in case they are defined:

- before, the contents of OPENSTACK_BIFROST_DEV_PATH was copied to
  OPENSTACK_BIFROST_PATH. By default, OPENSTACK_BIFROST_PATH is
  /tmp/.xci-deploy-env/bifrost, and after synchronization, the contents
  of OPENSTACK_BIFROST_DEV_PATH are copied to
  /tmp/.xci-deploy-env/bifrost/bifrost
- same for OPENSTACK_OSA_DEV_PATH
- rsync is not able to copy to destination folder that does not exist.
  See
https://askubuntu.com/questions/625085/rsync-over-ssh-error-in-protocol-data-stream-code-12-ssh-works
- The DEV repos are no longer deleted by default
- Git cloning only happens when the *_DEV_PATH is not defined

The benefits of using a local copy of the repositories are that

- installation goes faster, which is not an issue for Jenkins jobs but
  facilitates local testing and development

- Cloning a repo introduces random failures when the cloning fails.

Change-Id: I32645fa21f2f689c2d1a0896b8e51c665079ecec

--- a/xci/var/opnfv.yml
+++ b/xci/var/opnfv.yml
@@ -24,6 +24,7 @@ OPENSTACK_OSA_DEV_PATH: "{{ lookup('env','OPENSTACK_OSA_DEV_PATH') }}"
 OPENSTACK_OSA_VERSION: "{{ lookup('env','OPENSTACK_OSA_VERSION') }}"
 OPENSTACK_OSA_ETC_PATH: "{{ lookup('env','OPENSTACK_OSA_ETC_PATH') }}"
 XCI_ANSIBLE_PIP_VERSION: "{{ lookup('env','XCI_ANSIBLE_PIP_VERSION') }}"
+XCI_DEVEL_ROOT: "{{ lookup('env','XCI_DEVEL_ROOT') }}"
 XCI_FLAVOR: "{{ lookup('env','XCI_FLAVOR') }}"
 XCI_FLAVOR_ANSIBLE_FILE_PATH: "{{ lookup('env','XCI_FLAVOR_ANSIBLE_FILE_PATH') }}"
 XCI_LOOP: "{{ lookup('env','XCI_LOOP') }}"
