--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -17,9 +17,22 @@
       include_vars:
         file: ../var/{{ ansible_os_family }}.yml
   roles:
-    - role: remove-folders
-    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
-    - { role: clone-repository, project: "openstack/openstack-ansible", repo: "{{ OPENSTACK_OSA_GIT_URL }}", dest: "{{ OPENSTACK_OSA_PATH }}", version: "{{ OPENSTACK_OSA_VERSION }}" }
+    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}", when: OPNFV_RELENG_DEV_PATH == "" }
+    - { role: clone-repository, project: "openstack/openstack-ansible", repo: "{{ OPENSTACK_OSA_GIT_URL }}", dest: "{{ OPENSTACK_OSA_PATH }}", version: "{{ OPENSTACK_OSA_VERSION }}", when: OPENSTACK_OSA_DEV_PATH == "" }
+
+- hosts: localhost
+  connection: local
+  vars_files:
+    - ../var/{{ ansible_os_family }}.yml
+    - ../var/opnfv.yml
+  tasks:
+    - name: Update local openstack-ansible repo at {{ OPENSTACK_OSA_DEV_PATH }} if defined
+      git:
+        repo: "{{ OPENSTACK_OSA_GIT_URL  }}"
+        dest: "{{ OPENSTACK_OSA_DEV_PATH }}"
+        version: "{{ OPENSTACK_OSA_VERSION }}"
+      when:
+       - OPENSTACK_OSA_DEV_PATH != ""
 
 - hosts: opnfv
   remote_user: root
@@ -29,6 +42,10 @@
     - name: Load distribution variables
       include_vars:
         file: ../var/{{ ansible_os_family }}.yml
+    - name: Create destination folder since rsync fails when the path does not exist
+      file: 
+        path: "{{ OPNFV_RELENG_PATH }}"
+        state: directory
     - name: Synchronize local development releng-xci repository to XCI paths
       synchronize:
         src: "{{ OPNFV_RELENG_DEV_PATH }}"
@@ -40,7 +57,7 @@
     - name: Synchronize local development openstack-ansible repository to XCI paths
       synchronize:
         src: "{{ OPENSTACK_OSA_DEV_PATH }}"
-        dest: "{{ OPENSTACK_OSA_PATH }}"
+        dest: "{{ XCI_DEVEL_ROOT }}"
         recursive: yes
         delete: yes
       when:
