--- a/xci/playbooks/provision-vm-nodes.yml
+++ b/xci/playbooks/provision-vm-nodes.yml
@@ -18,9 +18,22 @@
         file: ../var/{{ ansible_os_family }}.yml
   roles:
     # using these roles here ensures that we can reuse this playbook in different context
-    - role: remove-folders
-    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}" }
-    - { role: clone-repository, project: "opnfv/bifrost", repo: "{{ OPENSTACK_BIFROST_GIT_URL }}", dest: "{{ OPENSTACK_BIFROST_PATH }}", version: "{{ OPENSTACK_BIFROST_VERSION }}" }
+    - { role: clone-repository, project: "opnfv/releng-xci", repo: "{{ OPNFV_RELENG_GIT_URL }}", dest: "{{ OPNFV_RELENG_PATH }}", version: "{{ OPNFV_RELENG_VERSION }}", when: OPNFV_RELENG_DEV_PATH  == "" }
+    - { role: clone-repository, project: "opnfv/bifrost", repo: "{{ OPENSTACK_BIFROST_GIT_URL }}", dest: "{{ OPENSTACK_BIFROST_PATH }}", version: "{{ OPENSTACK_BIFROST_VERSION }}", when: OPENSTACK_BIFROST_DEV_PATH == "" }
+
+- hosts: localhost
+  connection: local
+  vars_files:
+    - ../var/{{ ansible_os_family }}.yml
+    - ../var/opnfv.yml
+  tasks:
+    - name: Update local bifrost repo at {{ OPENSTACK_BIFROST_DEV_PATH }} if defined
+      git:
+        repo: "{{ OPENSTACK_BIFROST_GIT_URL  }}"
+        dest: "{{ OPENSTACK_BIFROST_DEV_PATH }}"
+        version: "{{ OPENSTACK_BIFROST_VERSION }}"
+      when:
+       - OPENSTACK_BIFROST_DEV_PATH != ""
 
 - hosts: localhost
   connection: local
@@ -35,7 +48,7 @@
       # command module is much faster than the copy module
       synchronize:
         src: "{{ OPENSTACK_BIFROST_DEV_PATH }}"
-        dest: "{{ OPENSTACK_BIFROST_PATH }}"
+        dest: "{{ XCI_DEVEL_ROOT }}"
         recursive: yes
         delete: yes
       when:
