Create a role which prepares xci for functest
Functest requires xci deployment to have:

- A public neutron network
- A subnet attached to the public neutron network
- The gateway from the subnet attached to one interface

The network and subnet creation are done via a script
instead of using Ansible OpenStack module in order to
get things working asap.

These three tasks are implemented in a role

This patch depends on a pending patch:

https://gerrit.opnfv.org/gerrit/#/c/39517/2

Change-Id: I0635227153087fd9e25b76f0859f82bf48bfb930
Signed-off-by: Manuel Buil <mbuil@suse.com>
Signed-off-by: Fatih Degirmenci <fatih.degirmenci@ericsson.com>

--- a/xci/playbooks/configure-opnfvhost.yml
+++ b/xci/playbooks/configure-opnfvhost.yml
@@ -146,10 +146,10 @@
         name: "{{ docker_package_name }}"
         state: latest
       when: lookup('env', 'JENKINS_HOME') != ""
-    # install shade on opnfv host only if we are running as part of CI
-    - name: install shade
+    # install python-openstackclient on opnfv host only if we are running as part of CI
+    - name: install python-openstackclient
       pip:
-        name: shade
+        name: python-openstackclient
         state: present
       when: lookup('env', 'JENKINS_HOME') != ""
 
